include/dtl/bindings/c/dtl_tensor.h

DTL_C_BEGIN
DTL_API dtl_status dtl_tensor_create(dtl_context_t ctx, dtl_dtype dtype,
                                      dtl_shape shape,
                                      dtl_tensor_t* tensor);
DTL_API dtl_status dtl_tensor_create_fill(dtl_context_t ctx, dtl_dtype dtype,
                                           dtl_shape shape, const void* value,
                                           dtl_tensor_t* tensor);
DTL_API void dtl_tensor_destroy(dtl_tensor_t tensor);
DTL_API dtl_shape dtl_tensor_shape(dtl_tensor_t tensor);
DTL_API int dtl_tensor_ndim(dtl_tensor_t tensor);
DTL_API dtl_size_t dtl_tensor_dim(dtl_tensor_t tensor, int dim);
DTL_API dtl_size_t dtl_tensor_global_size(dtl_tensor_t tensor);
DTL_API dtl_size_t dtl_tensor_local_size(dtl_tensor_t tensor);
DTL_API dtl_shape dtl_tensor_local_shape(dtl_tensor_t tensor);
DTL_API dtl_dtype dtl_tensor_dtype(dtl_tensor_t tensor);
DTL_API const void* dtl_tensor_local_data(dtl_tensor_t tensor);
DTL_API void* dtl_tensor_local_data_mut(dtl_tensor_t tensor);
DTL_API dtl_size_t dtl_tensor_stride(dtl_tensor_t tensor, int dim);
DTL_API dtl_status dtl_tensor_get_local_nd(dtl_tensor_t tensor,
                                            const dtl_index_t* indices,
                                            void* value);
DTL_API dtl_status dtl_tensor_set_local_nd(dtl_tensor_t tensor,
                                            const dtl_index_t* indices,
                                            const void* value);
DTL_API dtl_status dtl_tensor_get_local(dtl_tensor_t tensor,
                                         dtl_size_t linear_idx,
                                         void* value);
DTL_API dtl_status dtl_tensor_set_local(dtl_tensor_t tensor,
                                         dtl_size_t linear_idx,
                                         const void* value);
DTL_API dtl_rank_t dtl_tensor_num_ranks(dtl_tensor_t tensor);
DTL_API dtl_rank_t dtl_tensor_rank(dtl_tensor_t tensor);
DTL_API int dtl_tensor_distributed_dim(dtl_tensor_t tensor);
DTL_API dtl_status dtl_tensor_reshape(dtl_tensor_t tensor, dtl_shape new_shape);
DTL_API dtl_status dtl_tensor_fill_local(dtl_tensor_t tensor, const void* value);
DTL_API dtl_status dtl_tensor_barrier(dtl_tensor_t tensor);
DTL_API int dtl_tensor_is_valid(dtl_tensor_t tensor);