include/dtl/bindings/c/dtl_span.h


DTL_API dtl_status dtl_span_create(
    dtl_dtype dtype,
    void* local_data,
    dtl_size_t local_size,
    dtl_size_t global_size,
    dtl_rank_t rank,
    dtl_rank_t num_ranks,
    dtl_span_t* span);
DTL_API dtl_status dtl_span_from_vector(dtl_vector_t vec, dtl_span_t* span);
DTL_API dtl_status dtl_span_from_array(dtl_array_t arr, dtl_span_t* span);
DTL_API dtl_status dtl_span_from_tensor(dtl_tensor_t tensor, dtl_span_t* span);
DTL_API void dtl_span_destroy(dtl_span_t span);
DTL_API dtl_size_t dtl_span_size(dtl_span_t span);
DTL_API dtl_size_t dtl_span_local_size(dtl_span_t span);
DTL_API dtl_size_t dtl_span_size_bytes(dtl_span_t span);
DTL_API int dtl_span_empty(dtl_span_t span);
DTL_API dtl_dtype dtl_span_dtype(dtl_span_t span);
DTL_API const void* dtl_span_data(dtl_span_t span);
DTL_API void* dtl_span_data_mut(dtl_span_t span);