include/dtl/bindings/c/dtl_array.h


DTL_API int dtl_array_empty(dtl_array_t arr);
DTL_API dtl_dtype dtl_array_dtype(dtl_array_t arr);
DTL_API void* dtl_array_local_data_mut(dtl_array_t arr);
DTL_API dtl_status dtl_array_fill_local(dtl_array_t arr, const void* value);
DTL_API dtl_status dtl_array_barrier(dtl_array_t arr);
DTL_API int dtl_array_is_valid(dtl_array_t arr);