bindings/fortran/dtl_containers.f90


        function dtl_array_local_data_mut(arr) &
                bind(c, name='dtl_array_local_data_mut')
            import :: c_ptr
            type(c_ptr), value :: arr
            type(c_ptr) :: dtl_array_local_data_mut
        end function

        function dtl_array_dtype(arr) bind(c, name='dtl_array_dtype')
            import :: c_ptr, c_int
            type(c_ptr), value :: arr
            integer(c_int) :: dtl_array_dtype
        end function

        function dtl_array_empty(arr) bind(c, name='dtl_array_empty')
            import :: c_ptr, c_int
            type(c_ptr), value :: arr
            integer(c_int) :: dtl_array_empty
        end function

        function dtl_array_fill_local(arr, value) &
                bind(c, name='dtl_array_fill_local')
            import :: c_ptr, c_int
            type(c_ptr), value :: arr
            type(c_ptr), value :: value
            integer(c_int) :: dtl_array_fill_local
        end function

        function dtl_array_barrier(arr) bind(c, name='dtl_array_barrier')
            import :: c_ptr, c_int
            type(c_ptr), value :: arr
            integer(c_int) :: dtl_array_barrier
        end function

        function dtl_array_is_valid(arr) bind(c, name='dtl_array_is_valid')
            import :: c_ptr, c_int
            type(c_ptr), value :: arr
            integer(c_int) :: dtl_array_is_valid
        end function

        ! ==================================================================
        ! Tensor Operations
        ! ==================================================================

        function dtl_tensor_create(ctx, dtype, shape, tensor) &
                bind(c, name='dtl_tensor_create')
            import :: c_ptr, c_int, dtl_shape
            type(c_ptr), value :: ctx
            integer(c_int), value :: dtype
            type(dtl_shape), value :: shape
            type(c_ptr), intent(out) :: tensor
            integer(c_int) :: dtl_tensor_create
        end function

        function dtl_tensor_create_fill(ctx, dtype, shape, value, tensor) &
                bind(c, name='dtl_tensor_create_fill')
            import :: c_ptr, c_int, dtl_shape
            type(c_ptr), value :: ctx
            integer(c_int), value :: dtype
            type(dtl_shape), value :: shape
            type(c_ptr), value :: value
            type(c_ptr), intent(out) :: tensor
            integer(c_int) :: dtl_tensor_create_fill
        end function

        subroutine dtl_tensor_destroy(tensor) &
                bind(c, name='dtl_tensor_destroy')
            import :: c_ptr
            type(c_ptr), value :: tensor
        end subroutine

        function dtl_tensor_shape(tensor) bind(c, name='dtl_tensor_shape')
            import :: c_ptr, dtl_shape
            type(c_ptr), value :: tensor
            type(dtl_shape) :: dtl_tensor_shape
        end function

        function dtl_tensor_ndim(tensor) bind(c, name='dtl_tensor_ndim')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            integer(c_int) :: dtl_tensor_ndim
        end function

        function dtl_tensor_dim(tensor, dim) bind(c, name='dtl_tensor_dim')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: tensor
            integer(c_int), value :: dim
            integer(c_int64_t) :: dtl_tensor_dim
        end function

        function dtl_tensor_global_size(tensor) &
                bind(c, name='dtl_tensor_global_size')
            import :: c_ptr, c_int64_t
            type(c_ptr), value :: tensor
            integer(c_int64_t) :: dtl_tensor_global_size
        end function

        function dtl_tensor_local_size(tensor) &
                bind(c, name='dtl_tensor_local_size')
            import :: c_ptr, c_int64_t
            type(c_ptr), value :: tensor
            integer(c_int64_t) :: dtl_tensor_local_size
        end function

        function dtl_tensor_local_shape(tensor) &
                bind(c, name='dtl_tensor_local_shape')
            import :: c_ptr, dtl_shape
            type(c_ptr), value :: tensor
            type(dtl_shape) :: dtl_tensor_local_shape
        end function

        function dtl_tensor_dtype(tensor) bind(c, name='dtl_tensor_dtype')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            integer(c_int) :: dtl_tensor_dtype
        end function

        function dtl_tensor_local_data(tensor) &
                bind(c, name='dtl_tensor_local_data')
            import :: c_ptr
            type(c_ptr), value :: tensor
            type(c_ptr) :: dtl_tensor_local_data
        end function

        function dtl_tensor_local_data_mut(tensor) &
                bind(c, name='dtl_tensor_local_data_mut')
            import :: c_ptr
            type(c_ptr), value :: tensor
            type(c_ptr) :: dtl_tensor_local_data_mut
        end function

        function dtl_tensor_stride(tensor, dim) &
                bind(c, name='dtl_tensor_stride')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: tensor
            integer(c_int), value :: dim
            integer(c_int64_t) :: dtl_tensor_stride
        end function

        function dtl_tensor_get_local(tensor, linear_idx, value) &
                bind(c, name='dtl_tensor_get_local')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: tensor
            integer(c_int64_t), value :: linear_idx
            type(c_ptr), value :: value
            integer(c_int) :: dtl_tensor_get_local
        end function

        function dtl_tensor_set_local(tensor, linear_idx, value) &
                bind(c, name='dtl_tensor_set_local')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: tensor
            integer(c_int64_t), value :: linear_idx
            type(c_ptr), value :: value
            integer(c_int) :: dtl_tensor_set_local
        end function

        function dtl_tensor_get_local_nd(tensor, indices, value) &
                bind(c, name='dtl_tensor_get_local_nd')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: tensor
            integer(c_int64_t), intent(in) :: indices(*)
            type(c_ptr), value :: value
            integer(c_int) :: dtl_tensor_get_local_nd
        end function

        function dtl_tensor_set_local_nd(tensor, indices, value) &
                bind(c, name='dtl_tensor_set_local_nd')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: tensor
            integer(c_int64_t), intent(in) :: indices(*)
            type(c_ptr), value :: value
            integer(c_int) :: dtl_tensor_set_local_nd
        end function

        function dtl_tensor_num_ranks(tensor) &
                bind(c, name='dtl_tensor_num_ranks')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            integer(c_int) :: dtl_tensor_num_ranks
        end function

        function dtl_tensor_rank(tensor) bind(c, name='dtl_tensor_rank')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            integer(c_int) :: dtl_tensor_rank
        end function

        function dtl_tensor_distributed_dim(tensor) &
                bind(c, name='dtl_tensor_distributed_dim')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            integer(c_int) :: dtl_tensor_distributed_dim
        end function

        function dtl_tensor_reshape(tensor, new_shape) &
                bind(c, name='dtl_tensor_reshape')
            import :: c_ptr, c_int, dtl_shape
            type(c_ptr), value :: tensor
            type(dtl_shape), value :: new_shape
            integer(c_int) :: dtl_tensor_reshape
        end function

        function dtl_tensor_fill_local(tensor, value) &
                bind(c, name='dtl_tensor_fill_local')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            type(c_ptr), value :: value
            integer(c_int) :: dtl_tensor_fill_local
        end function

        function dtl_tensor_barrier(tensor) &
                bind(c, name='dtl_tensor_barrier')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            integer(c_int) :: dtl_tensor_barrier
        end function

        function dtl_tensor_is_valid(tensor) &
                bind(c, name='dtl_tensor_is_valid')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            integer(c_int) :: dtl_tensor_is_valid
        end function

        ! ==================================================================
        ! Span Operations
        ! ==================================================================

        function dtl_span_create(dtype, local_data, local_size, global_size, &
                                 rank, num_ranks, span) &
                bind(c, name='dtl_span_create')
            import :: c_ptr, c_int, c_int64_t
            integer(c_int), value :: dtype
            type(c_ptr), value :: local_data
            integer(c_int64_t), value :: local_size
            integer(c_int64_t), value :: global_size
            integer(c_int), value :: rank
            integer(c_int), value :: num_ranks
            type(c_ptr), intent(out) :: span
            integer(c_int) :: dtl_span_create
        end function

        function dtl_span_from_vector(vec, span) &
                bind(c, name='dtl_span_from_vector')
            import :: c_ptr, c_int
            type(c_ptr), value :: vec
            type(c_ptr), intent(out) :: span
            integer(c_int) :: dtl_span_from_vector
        end function

        function dtl_span_from_array(arr, span) &
                bind(c, name='dtl_span_from_array')
            import :: c_ptr, c_int
            type(c_ptr), value :: arr
            type(c_ptr), intent(out) :: span
            integer(c_int) :: dtl_span_from_array
        end function

        function dtl_span_from_tensor(tensor, span) &
                bind(c, name='dtl_span_from_tensor')
            import :: c_ptr, c_int
            type(c_ptr), value :: tensor
            type(c_ptr), intent(out) :: span
            integer(c_int) :: dtl_span_from_tensor
        end function

        subroutine dtl_span_destroy(span) bind(c, name='dtl_span_destroy')
            import :: c_ptr
            type(c_ptr), value :: span
        end subroutine

        function dtl_span_size(span) bind(c, name='dtl_span_size')
            import :: c_ptr, c_int64_t
            type(c_ptr), value :: span
            integer(c_int64_t) :: dtl_span_size
        end function

        function dtl_span_local_size(span) &
                bind(c, name='dtl_span_local_size')
            import :: c_ptr, c_int64_t
            type(c_ptr), value :: span
            integer(c_int64_t) :: dtl_span_local_size
        end function

        function dtl_span_size_bytes(span) &
                bind(c, name='dtl_span_size_bytes')
            import :: c_ptr, c_int64_t
            type(c_ptr), value :: span
            integer(c_int64_t) :: dtl_span_size_bytes
        end function

        function dtl_span_empty(span) bind(c, name='dtl_span_empty')
            import :: c_ptr, c_int
            type(c_ptr), value :: span
            integer(c_int) :: dtl_span_empty
        end function

        function dtl_span_dtype(span) bind(c, name='dtl_span_dtype')
            import :: c_ptr, c_int
            type(c_ptr), value :: span
            integer(c_int) :: dtl_span_dtype
        end function

        function dtl_span_data(span) bind(c, name='dtl_span_data')
            import :: c_ptr
            type(c_ptr), value :: span
            type(c_ptr) :: dtl_span_data
        end function

        function dtl_span_data_mut(span) bind(c, name='dtl_span_data_mut')
            import :: c_ptr
            type(c_ptr), value :: span
            type(c_ptr) :: dtl_span_data_mut
        end function
